apps/ollama/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: ollama-ingress-ext
  namespace: llm
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`llm.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: ollama
          port: main
